--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4"
   }
