--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4"
   }
