--- a/Server/package.json
+++ b/Server/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4"
+  },
+  "engines": {
+  "node": ">=20.12.2 <20.14.0"
   }
 }
