--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.5.4",
+    "@google-cloud/functions-framework": "^3.2.0"
   },
   "engines": {
     "node": ">=20.12.2 <20.14.0"
