--- a/Server/package.json
+++ b/Server/package.json
@@ -11,12 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.2.0",
     "axios": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.4",
-    "@google-cloud/functions-framework": "^3.2.0"
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.5.4"
   },
   "engines": {
     "node": ">=20.12.2 <20.14.0"
